<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/constan">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Boxone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="@dimen/magin_wite"
            android:fontFamily="@font/roboto_thin" android:textSize="@dimen/box_text_size"
            style="@style/whiteBox" android:id="@+id/BonOneText" android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
    />
    <TextView
            android:text="@string/boxTwe"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/BonOneText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" style="@style/whiteBox"/>
    <TextView
            android:text="@string/BoxThee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_three_text" style="@style/whiteBox"
            app:layout_constraintBottom_toTopOf="@+id/box_four_text"
            app:layout_constraintTop_toTopOf="@+id/text"
            app:layout_constraintStart_toEndOf="@+id/text"
            android:layout_marginStart="@dimen/magin_wite" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/magin_wite"/>
    <TextView
            android:text="@string/boxfrol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_four_text" style="@style/whiteBox"
            app:layout_constraintTop_toBottomOf="@+id/box_three_text"
            app:layout_constraintBottom_toTopOf="@+id/box_five_text"
            app:layout_constraintStart_toEndOf="@+id/text" android:layout_marginStart="@dimen/magin_wite"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/magin_wite"
            android:layout_marginTop="@dimen/magin_wite" android:layout_marginBottom="@dimen/magin_wite"/>
    <TextView
            android:text="@string/boxFive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_five_text" style="@style/whiteBox"
            app:layout_constraintBottom_toBottomOf="@+id/text" app:layout_constraintTop_toBottomOf="@+id/box_four_text"
            app:layout_constraintStart_toEndOf="@+id/text"
            android:layout_marginStart="@dimen/magin_wite" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/magin_wite"/>
    <TextView
            android:text="@string/how_to_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:fontFamily="@font/roboto_thin"
            android:textSize="24sp" android:textStyle="bold" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBaseline_toBaselineOf="@+id/info_text"/>
    <TextView
            android:text="@string/tap_the_boxes_and_buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/info_text" android:fontFamily="@font/roboto_thin"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/text"
            app:layout_constraintStart_toEndOf="@+id/textView5" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/Red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/red_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_buttton  "
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/yellow_buttton  "/>
    <Button
            android:text="@string/Yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yellow_buttton"
            app:layout_constraintStart_toEndOf="@+id/red_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/green_button" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/info_text" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/Green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/green_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_buttton  "
            app:layout_constraintStart_toEndOf="@+id/yellow_buttton  " app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>